# stremio-moviebox

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
moviebox/: __init__.py  utils.py
moviebox/legacy/: _bases.py  constants.py  core.py  exceptions.py  helpers.py  models.py  requests.py  streams.py
moviebox/legacy/extractors/: __init__.py  core.py  exceptions.py  json_models.py  tag_models.py
moviebox/mobile/: _bases.py  constants.py  core.py  crypto.py  exceptions.py  helpers.py  http_client.py  logger.py  streams.py  urls.py
moviebox/mobile/models/: __init__.py  details.py  downloadables.py  homepage.py  search.py
moviebox/web/: _bases.py  constants.py  core.py  exceptions.py  helpers.py  models.py  requests.py  streams.py  types.py
server/: cache.py  catalog.py  logger.py  main.py  manifest.py  routes.py  settings.py
streaming/: helpers.py  language.py  metadata.py  provider.py
web/: index.html
web/css/: style.css
web/js/: app.js
